Debugged issues w/ nav bottom white space & records
Removed the extra white space appearing below the navigation.  Fixed the
list view layout breaking for lower resolutions.

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -23,6 +23,7 @@
     background: url(http://iartnorfolk.com/images/arrow.png) 100% 50% no-repeat;
     display: block;
     float: left;
+    min-width: 320px;
     width: 100%;
     height: 100%;
     border-bottom: .5em solid #ddd;
@@ -32,10 +33,12 @@
     padding-top: 7%;
 }
 
+.record-description p {
+    padding-left: 20px;
+}
+
 .thumbnail {
-    width: 200px;
     height: 200px;
-    padding-right: 20px;
 }
 
 .thumbnail img {
@@ -65,9 +68,10 @@
 }
 
 ul {
-  padding: 0px;
-  margin: 0px;
-  margin-bottom: 2em;
+    height: 100%;
+    padding: 0px;
+    margin: 0px;
+    margin-bottom: 2em;
 }
 
 .navbar ul {
@@ -82,6 +86,10 @@ ul {
     background: rgb(66, 184, 221); /* this is a light blue */
     padding: 0px;
     margin: 0px;
+}
+
+.navbar li a {
+    height: 83%;    
 }
 
 .navbar button {
